fix: z-index splash

--- a/src/scss/app.sass
+++ b/src/scss/app.sass
@@ -211,6 +211,7 @@ div[l-if="this.slide === 4"]
   transform: translate(-50%, -50%)
   top: 50%
   left: 50%
+  z-index: -1
   // transform: scale(0.8)
 
   img
